fix( sections ): overflow caused by ( main ) section

--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 }
 
 section#main {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-image: linear-gradient(0deg, hsla(0, 0%, 0%, 0.6), hsla(0, 0%, 0%, 0.6)), url("/assets/images/cairo-overview.jpg");
   background-size: cover;
